enums are added to swagger docs
